changed header and contact seide add is here

--- a/index.html
+++ b/index.html
@@ -79,10 +79,6 @@
                 <span class="sekiller"
                   ><img src="./assets/images/footage.png" alt=""
                 /></span>
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Animi, quidem!
-                </p>
               </div>
             </li>
             <li>
@@ -115,9 +111,8 @@
     </section>
     <section class="contact">
       <div class="container">
-       <h3>Contact width me</h3>
+        <h3>Contact width me</h3>
         <div class="contact-side">
-        
           <div class="contact-side-left">
             <form action="#">
               <p>
@@ -132,10 +127,76 @@
               <button type="submit">Send</button>
             </form>
           </div>
-          <div class="contact-side-right"></div>
+          <div class="contact-side-right">
+            <div class="contact-side-right-top">
+              <p class="contact-with-me">
+                <a href="#">
+                  <img
+                    src="./assets/images/contact-image/github.png"
+                    alt="github"
+                  />
+                  <br />
+                  </a
+                >
+              </p>
+              <p class="contact-with-me">
+                <a href="#">
+                  <img
+                    src="./assets/images/contact-image/instagram.png"
+                    alt="instagram"
+                  />
+                  <br />
+                  </a
+                >
+              </p>
+            </div>
+            <div class="contact-side-right-bottom">
+              <p class="contact-with-me">
+                <a href="#">
+                  <img
+                    src="./assets/images/contact-image/linkedin.png"
+                    alt="linkedin"
+                  />
+                  <br />
+                  </a
+                >
+              </p>
+              <p class="contact-with-me">
+                <a href="#">
+                  <img
+                    src="./assets/images/contact-image/medium.png"
+                    alt="medium"
+                  />
+                  <br />
+                  </a
+                >
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
+
+
+<!-- 
+&-right {
+  display: flex;
+  // justify-content: space-between;
+  &-top {
+   
+    p {
+      width: 30%;
+      a {
+        img {
+          width: 300px;
+        }
+        span {
+          font-size: xx-large;
+        }
+      }
+    }
+  }
+} -->
